--- a/dkms.conf
+++ b/dkms.conf
@@ -1,9 +1,12 @@
 PACKAGE_NAME="asus"
 PACKAGE_VERSION=1.0
-MAKE="make -C $kernel_source_dir M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build/src hid-asus.ko"
+MAKE="make -C $kernel_source_dir M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build/src clean modules"
 CLEAN="rm -f *.*o"
-BUILT_MODULE_NAME="hid-asus"
-BUILT_MODULE_LOCATION="src"
-DEST_MODULE_LOCATION="/updates"
+BUILT_MODULE_NAME[0]="hid-asus"
+BUILT_MODULE_LOCATION[0]="src"
+DEST_MODULE_LOCATION[0]="/updates"
+BUILT_MODULE_NAME[1]="i2c-hid"
+BUILT_MODULE_LOCATION[1]="src"
+DEST_MODULE_LOCATION[1]="/updates"
 REMAKE_INITRD=yes
 AUTOINSTALL=yes
