Use a udev rule to bind device to hid-asus

--- a/dkms.conf
+++ b/dkms.conf
@@ -8,5 +8,5 @@ DEST_MODULE_LOCATION[0]="/updates"
 BUILT_MODULE_NAME[1]="i2c-hid"
 BUILT_MODULE_LOCATION[1]="src"
 DEST_MODULE_LOCATION[1]="/updates"
-REMAKE_INITRD=yes
+REMAKE_INITRD=no
 AUTOINSTALL=yes
